<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GPSCommentLogger</string>
    <string name="action_settings">Settings</string>
    <string name="submit_button">Submit</string>
    <string name="attach_picture">Attach Picture</string>
    <string name="coordinates">Select GPS Location</string>
    <string name="title">Title</string>
    <string name="username">Username</string>
    <string name="votes">votes</string>
    <string name="text">Text</string>
    <string name="action_post">New Thread</string>
    <string name="saved">Saved Pages</string>
    
    <string name="create_topic_label">New Topic</string>



    <!-- <string name="bullet">•</string> -->

    <string name="create_reply_label">New Comment</string>
    

    <string name="select_username">Select Username</string>

    <string name="submit_location">Submit Location</string>


    <string name="bullet">\u0020•\u0020</string>
    
    <string name="sort1">Item 1</string>
    <string name="sort2">Item 2</string>
    <string name="sort3">Item 3</string>
    <string name="sort4">Item 4</string>
    <string name="sort5">Item 5</string>
    <string name="sort6">Item 6</string>
    
    <string-array name="sort_list">
        <item>@string/sort1</item>
        <item>@string/sort2</item>
        <item>@string/sort3</item>
    </string-array>


</resources>
